# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/user_iam/user_auth/userauth.gni")

config("userauth_public_config") {
  include_dirs = [ 
    "include"
   ]
}

ohos_shared_library("userauth") {
  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [
     "src/auth_native_module.cpp",
     "src/user_auth_impl.cpp",
     "src/auth_build.cpp",
     "src/result_convert.cpp", 
     "src/user_auth_helper.cpp",
     "src/authapi_callback.cpp",
  ]

  deps = [
    "//utils/native/base:utils",
    "${userauth_innerkits_path}/native:userauth_framework",
    "//foundation/ace/napi:ace_napi"
  ]

  configs = [
    "${userauth_utils_path}:utils_config",
  ]

  public_configs = [ ":userauth_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  relative_install_dir = "module"

  part_name = "user_auth"
  subsystem_name = "user_iam"
}
