# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_auth/userauth.gni")
import("//build/ohos.gni")

config("userauth_public_config") {
  include_dirs = [
    "include",
    "//third_party/libuv/include",
  ]
}

ohos_shared_library("userauth") {
  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [
    "src/auth_build.cpp",
    "src/authapi_callback.cpp",
    "src/result_convert.cpp",
    "src/user_auth_helper.cpp",
    "src/user_auth_impl.cpp",
  ]

  deps = [
    "${userauth_innerkits_path}/native:userauth_framework",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  configs = [ "${userauth_utils_path}:utils_config" ]

  public_configs = [ ":userauth_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  part_name = "user_auth"
  subsystem_name = "useriam"
}

ohos_shared_library("userauth_napi") {
  cflags = [
    "-fPIC",
    "-g3",
  ]

  defines = [ "USER_AUTH_FOR_KITS" ]

  sources = [
    "src/auth_build.cpp",
    "src/authapi_callback.cpp",
    "src/result_convert.cpp",
    "src/user_auth_helper.cpp",
    "src/user_auth_impl.cpp",
  ]

  deps = [
    "${userauth_innerkits_path}/native:userauth_framework",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  configs = [ "${userauth_utils_path}:utils_config" ]

  public_configs = [ ":userauth_public_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module/useriam"

  part_name = "user_auth"
  subsystem_name = "useriam"
}
