# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/userauth/userauth.gni")

config("userauth_private_config") {
  include_dirs = [
    "//utils/system/safwk/napi/include",
    #"${userauth_frameworks_path}/kitsimpl/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/innerkitsimpl/distributeddatafwk/include",
  ]
}

config("userauth_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("userauth_framework") {
  sources = [
    "../../../frameworks/kitsimpl/src/userauth_proxy.cpp",
    "../../../frameworks/kitsimpl/src/userauth.cpp",
    "../../../frameworks/kitsimpl/src/userauth_async_stub.cpp",
  ]

  configs = [
    "${userauth_utils_path}:utils_config",
    ":userauth_private_config"
  ]

  public_configs = [ ":userauth_public_config" ]

  deps = [
    "//utils/native/base:utils",
    "//base/useriam/coauth/interfaces/innerkits:coauth_framework",
   ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${userauth_native_part_name}"
}
