# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_auth/userauth.gni")

config("userauth_private_config") {
  include_dirs = [ "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include" ]
}

config("userauth_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("userauth_framework") {
  sources = [
    "../../../frameworks/kitsimpl/src/user_auth.cpp",
    "../../../frameworks/kitsimpl/src/userauth_async_stub.cpp",
    "../../../frameworks/kitsimpl/src/userauth_proxy.cpp",
  ]

  configs = [
    "${userauth_utils_path}:utils_config",
    ":userauth_private_config",
  ]

  public_configs = [ ":userauth_public_config" ]

  deps = [
    "//base/user_iam/auth_executor_mgr/interfaces/innerkits:coauth_framework",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${userauth_native_part_name}"
}
